UserView selected hightlight

--- a/views/main.less
+++ b/views/main.less
@@ -34,15 +34,17 @@
 			}
 		}
 	}
-	
+	.user-sel:hover {
+		background-color: #bbd8ff;
+	}
+	.selected {
+		background-color: #e0f0ff;
+	}
 	.file-list {
 		.file:hover {
-			background-color: #e0f0ff;
-		}
-		
-		.file.selected {
 			background-color: #bbd8ff;
 		}
+		
 	}
 	
 	/* list view */
