--- a/views/main.less
+++ b/views/main.less
@@ -103,3 +103,8 @@
     cursor: inherit;
     display: block;
 }
+
+button#UserTagView, button#addUserTags, button#removeUserTags, button#editUserTags {
+	color: blue;
+}
+
