--- a/views/main.less
+++ b/views/main.less
@@ -32,6 +32,15 @@
 			tr th.size {
 				width: 10%;
 			}
+			tr th.username {
+				width:40%
+			}
+			tr th.usertags {
+				width:40%
+			}
+			tr th.useremail {
+				width:20%
+			}
 		}
 	}
 	.user-sel:hover {
@@ -103,3 +112,8 @@
     cursor: inherit;
     display: block;
 }
+
+button#UserTagView, button#addUserTags, button#removeUserTags, button#editUserTags {
+	color: blue;
+}
+
