--- a/views/main.less
+++ b/views/main.less
@@ -30,7 +30,7 @@
 			background-color: #e0f0ff;
 		}
 		
-		.file.selected, icon.selected {
+		.file.selected, .icon.selected {
 			background-color: #bbd8ff;
 		}
 	}
