--- a/www/templates/list.html
+++ b/www/templates/list.html
@@ -1,11 +1,15 @@
 <ion-view view-title="{{path}}" ng-controller='FileCtrl'>
-  <ion-content>
-    <ion-list>
-      <ion-item ng-repeat="file in files" href="#/file/list/{{file.path}}">
-        {{file.name}}
-      </ion-item>
-    </ion-list>
-    <ion-infinite-scroll ng-if="state.page < state.total_page" on-infinite="loadMore()">
-  	</ion-infinite-scroll>
-  </ion-content>
+	<ion-content>
+		<ion-list>
+			<ion-item class="item-avatar" ng-repeat="file in files" href="#/file/list/{{file.path}}">
+				<img ng-src="{{file.iconUrl}}" aria-label="{{file}}">
+				{{file.name}}
+				{{file.mtime}}
+				{{file.contentType}}
+				{{file.size}}
+			</ion-item>
+		</ion-list>
+		<ion-infinite-scroll ng-if="state.page < state.total_page" on-infinite="loadMore()">
+		</ion-infinite-scroll>
+	</ion-content>
 </ion-view>
