--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -21,6 +21,16 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 
+$select-color:	#bbd8ff;
+
 .item-avatar > img:first-child, .item-avatar .item-content > img:first-child {
 	border-radius: 0;
+}
+
+.selected {
+	background-color: $select-color;
+	
+	.item-content {
+		background-color: $select-color;
+	}
 }
