--- a/www/templates/list.html
+++ b/www/templates/list.html
@@ -1,7 +1,11 @@
-<ion-view view-title="{{path}}">
+<ion-view view-title="{{path}} ({{nselected()}} selected/{{state.count}} total)">
 	<ion-content>
 		<ion-list>
-			<ion-item class="item-avatar" ng-repeat="file in files" ng-click="platform.open(file)">
+			<ion-item class="item-avatar" 
+				ng-repeat="file in files"
+				ng-class="file.selected ? 'selected' : ''" 
+				on-hold="file.toggleSelect(); $event.stopPropagation();"
+				on-tap="platform.open(file); $event.stopPropagation();">
 				<img ng-src="{{file.iconUrl}}" aria-label="{{file}}">
 				<h2>{{file.name}}</h2>
 				<p>
@@ -9,6 +13,8 @@
 					{{file.mtime.toLocaleString()}}
 					{{file.contentType}}
 				</p>
+				<ion-option-button class="button button-positive icon-left ion-edit" ng-click="edit(file); $event.stopPropagation();">Edit</ion-option-button>
+				<ion-option-button class="button button-assertive icon-left ion-trash-a" ng-click="destroy(file); $event.stopPropagation();">Delete</ion-option-button>
 			</ion-item>
 		</ion-list>
 		<ion-infinite-scroll ng-if="state.page < state.total_page" on-infinite="loadMore()">
