refresh current path

--- a/www/templates/list.html
+++ b/www/templates/list.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{path}} ({{collection.nselected()}} selected/{{collection.count}} total)">
+<ion-view view-title="{{collection.path}} ({{collection.nselected()}} selected/{{collection.count}} total)">
 	<ion-content>
 		<ion-list class='filelist'>
 			<ion-item class="item-avatar" 
