--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,20 +1,8 @@
 <ion-side-menus enable-menu-with-back-views="true">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar align-title="left" class="bar-stable">
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
-        </button>
-        <button class="button" ng-class="mode == 'select' ? '' : 'invisible'" ng-click='selectAll()'>
-          Select all
-        </button>
-        <button class="button" ng-class="mode == 'select' ? '' : 'invisible'" ng-click='deselectAll()'>
-          Deselect all
-        </button>
-        <button class="button" ng-class="mode == 'select' ? '' : 'invisible'" ng-click='destroySel()'>
-          Delete selected
-        </button>
-        <button class="button" ng-class="mode == 'select' ? '' : 'invisible'" ng-click='cancel()'>
-          Cancel
         </button>
       </ion-nav-buttons>
     </ion-nav-bar>
