--- a/www/templates/edit.html
+++ b/www/templates/edit.html
@@ -1,6 +1,6 @@
 <ion-modal-view>
   <ion-header-bar>
-    <button class="button button-clear button-positive" ng-click="file.$save(); modal.hide();">Save</button>
+    <button class="button button-clear button-positive" ng-click="model.$save({name: model.newname}); modal.hide();">Save</button>
       <h1 class="title">Edit</h1>
     <button class="button button-clear" ng-click="modal.hide()">Close</button>
   </ion-header-bar>
@@ -8,7 +8,7 @@
   	<div class="list">
 	  <label class="item item-input">
 	  	<span class="input-label">Name</span>
-	    <input type="text" ng-model="file.name" required>
+	    <input type="text" ng-model="model.newname" required>
 	  </label>
 	</div>
   </ion-content>
