--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -9,11 +9,11 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item nav-clear menu-close href="#/file/search">
-          Search
+        <ion-item nav-clear menu-close href="#/file/file/">
+          File
         </ion-item>
-        <ion-item nav-clear menu-close href="#/file/list/">
-          List
+        <ion-item nav-clear menu-close href="#/file/permission">
+          Permission
         </ion-item>
       </ion-list>
     </ion-content>
