--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -59,3 +59,7 @@ $select-color:	#bbd8ff;
 	transform: scale(.4, .4);
 	color: white;
 }
+
+.dirty, .dirty .item-content {
+	background-color: #F78181;
+}
