--- a/www/templates/file/list.html
+++ b/www/templates/file/list.html
@@ -25,7 +25,7 @@
 				<img ng-src="{{model.iconUrl}}" aria-label="{{model.name}}">
 				<h2>
 					<span>{{model.name}}</span>
-					<tag-editor ng-model="model.tags" fetch="api/tag" template-url='templates/tag.html' placeholder="Tag (e.g. Team)">
+					<tag-editor ng-model="model.tags" fetch="api/tag" template-url='templates/file/tag.html' placeholder="Tag (e.g. Team)">
 	  				</tag-editor>
 				</h2>
 				<p>
