--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -15,6 +15,9 @@
         <ion-item nav-clear menu-close href="#/file/permission">
           Permission
         </ion-item>
+        <ion-item nav-clear menu-close ng-if="env.isNative()" ng-click="navigator.app.exitApp()">
+          Exit
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
